# openbb-kdb

./: .env.example  .gitignore  README.md  pyproject.toml
openbb_kdb/: __init__.py  accessor.py  store.py  utils.py
openbb_kdb/models/: __init__.py  historical.py
scripts/: load_aapl.py
tests/: conftest.py  test_historical.py  test_store.py  test_utils.py
