[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "openbb-kdb"
version = "0.1.0"
description = "kdb+ integration for OpenBB: read tables as a provider, persist any OBBject, generic store. Connects to a kdb+ server over IPC via PyKX."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-only" }
dependencies = [
    "openbb-core>=1.5.8",
    "pykx>=2.5,<4.0",
    # pykx's toq imports pandas.core.indexes.numeric, removed in pandas 3.0
    # (pykx itself declares pandas<3.0; restated here as a hard floor/ceiling).
    "pandas<3.0",
]

# Read path: provider="kdb" serves data stored in a kdb+ table.
[project.entry-points."openbb_provider_extension"]
kdb = "openbb_kdb:kdb_provider"

# Write path: result.kdb.write(...) persists an OBBject result to a kdb+ table.
[project.entry-points."openbb_obbject_extension"]
kdb = "openbb_kdb:ext"

[tool.setuptools.packages.find]
include = ["openbb_kdb*"]

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [".git", "__pycache__", "*.egg-info", "build", "dist", "tests/__pycache__"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff.lint]
ignore = [
    # Import-outside-toplevel is intentional: lazy imports avoid loading
    # pykx/pandas/pydantic at module-import time.
    "PLC0415",
]
